fix(storefront): BCTHEME-30 fix misaligned tooltip for required product option (#1915)

--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -67,6 +67,8 @@
 
 .form-checkbox,
 .form-radio {
+    bottom: 0.5rem;
+    left: 0.5rem;
 
     + .form-label {
 
@@ -86,6 +88,10 @@
     }
 }
 
+.form-option-wrapper {
+    position: relative;
+    display: inline-block;
+}
 
 // Citadel form-actions
 // -----------------------------------------------------------------------------
